# us-invesment-analysis-video

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  premarket-macro-brief-system-plan.md  pyproject.toml
artifacts/: brief_2026-07-13.json  brief_2026-07-14.json  brief_2026-07-15.json  brief_2026-07-16.json  brief_2026-07-17.json  brief_2026-07-20.json  brief_2026-07-21.json  brief_2026-07-22.json  brief_2026-07-23.json  brief_2026-07-24.json  report_2026-07-13.md  report_2026-07-14.md  report_2026-07-15.md  report_2026-07-16.md  report_2026-07-17.md  report_2026-07-20.md  report_2026-07-21.md  report_2026-07-22.md  report_2026-07-23.md  report_2026-07-24.md  script_2026-07-13.json  script_2026-07-14.json  script_2026-07-15.json  script_2026-07-16.json  script_2026-07-17.json  script_2026-07-20.json  script_2026-07-21.json  script_2026-07-22.json  script_2026-07-23.json  script_2026-07-24.json  snapshot_2026-07-13.json  snapshot_2026-07-14.json  snapshot_2026-07-15.json  snapshot_2026-07-16.json  snapshot_2026-07-17.json  snapshot_2026-07-20.json  snapshot_2026-07-21.json  snapshot_2026-07-22.json  snapshot_2026-07-23.json  snapshot_2026-07-24.json
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
pmb/: __init__.py  autopilot.py  cli.py  config.py  orchestrator.py
prompts/: cloud_routine.md  daily_research.md
state/: thesis.json
tests/: test_calendar.py  (+26 more)
(+36 files in other folders)
