[package]
name = "pmb-desktop"
version = "0.1.0"
description = "PMB 控台 — 美股早發車盤前影片製作控制面板"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
